--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ body{padding: 0; margin:0;}
 	position: absolute;
 	width: 100%;
 	height: 80%;
-	top: 46%;left: 15%;
+	top: 46%;left: 6rem;
 	transform: translateY(-50%);
 }
 .wrap-video{
