--- a/style.css
+++ b/style.css
@@ -265,6 +265,7 @@ grid-template-columns: auto auto auto auto auto
 	font-family: 'montserrat',sans-serif !important;
 	letter-spacing: 0.7px;
 	font-size: 13px;
+	font-weight: bold;
 	line-height: 1.1;
 	color: #000;
 	margin-top: 10px;
