--- a/tugas/faisol/menu.css
+++ b/tugas/faisol/menu.css
@@ -1,9 +1,14 @@
 .menu{background-color: white;}
 .menu ul li{
 	display: inline;
+	font-size: 14px;
+	color: black
+}
+.navbar-light .navbar-nav .nav-link{
+	color: black !important
 }
 .wrapmenu{
-	background: rgba(0,0,0,.7);
+	background: rgba(0,0,0,.5);
 	height: 350px;
 }
 .submenu{
@@ -41,6 +46,13 @@
 .contentsub ul li{
 	display: block;
 }
+.contentsub ul li:first-child a{
+	color: #d3ae57;
+}
+.contentsub ul li:hover, .submenu ul li:hover{
+	text-decoration: none;
+	background-color: rgba(255,255,255,.3);
+}
 .contentsub ul li a{
 	border-bottom: 1px solid white;
 	padding-left: 0;
@@ -58,10 +70,10 @@
 	flex-wrap: nowrap;
 	align-items: normal;
 	justify-content: normal;
-}
-.menu .navbar{background-color: white}
+}	
+.menu .navbar{background-color: transparent;}
 .menu .navbar .nav-link{
-	padding: 10px 0
+	padding: 1rem 10px !important
 }
 .fill{
 	height: 35px;
@@ -121,7 +133,7 @@
 	left: 0;
 	z-index: 2;
 	width: 100%;
-	background-color: rgba(0,0,0,.7);
+	background-color: rgba(0,0,0,.4);
 	color: white
 }
 .head2 ul li ul li{
@@ -131,16 +143,21 @@
 	padding: 7px 5px;
 }
 .head2 ul li ul li:hover{
-	background-color: rgba(255,255,255,.7);
+	background-color: rgba(255,255,255,.3);
 }
 .form-inline{
 	overflow: hidden;
 	border: 1px solid #eee;
     border-radius: 20px;
+    background-color: tomato;
+    width: 250px
 }
 .form-inline input{
 	border: none;
-	padding-left: 50px;
+	height: 100%;
+	padding-left: 35px;
+	font-size: 14px;
+	width: 100% !important
 }
 .form-inline button{
 	position: absolute;
@@ -148,9 +165,23 @@
 	top: 0;
 	border: none;
 	color: black;
+	font-size: 14px;
 }
+.form-control:focus{outline: none!important; box-shadow: none;}
 .form-inline input:focus{outline: none!important; border: none;}
+.form-inline button:focus{outline: none!important; border: none;}
+.cari{height: 100%; padding: 0 10px; background-color:  transparent;}
 .wr{padding: 15px 0}
+.head a{
+	text-decoration: none;
+	color: black;
+}
+.head a:hover, .contentsub ul li a:hover, .submenu ul li:hover a{
+	text-decoration: none;
+}
+.head2 ul li ul li a{color: white}
+
+
 /*Akses Footer Yogi*/
 .footer{width: 100%; min-height: 150px; background-color: DarkGrey}
 
@@ -159,7 +190,6 @@
 	padding-bottom: 58px;
 	background-color: #e3e3e3;
 	border-bottom: 1px solid #fecf3a;
-
 }
 	
 .con-fa{
