--- a/tugas/faisol/menu.css
+++ b/tugas/faisol/menu.css
@@ -1,4 +1,4 @@
-.menu{background-color: white;}
+body{background-color: tomato}
 .menu ul li{
 	display: inline;
 	font-size: 14px;
@@ -8,7 +8,7 @@
 	color: black !important
 }
 .wrapmenu{
-	background: rgba(0,0,0,.5);
+	background: rgba(0,0,0,.7);
 	height: 350px;
 }
 .submenu{
@@ -61,7 +61,6 @@
 	border-bottom: none;
 }
 .col-11{
-	background-color: white;
 	padding: 0 !important;
 	justify-content:space-around	;	
 }
