--- a/tugas/faisol/menu.css
+++ b/tugas/faisol/menu.css
@@ -7,7 +7,6 @@
 	color: black !important
 }
 .wrapmenu{
-	background: rgba(0,0,0,.7);
 	height: 350px;
 }
 .submenu{
@@ -83,6 +82,9 @@
 .menucontainer{
 	max-width: 80%;
 	margin: 0 auto;
+}
+.item-sub{
+	background-color: rgba(0,0,0,.7);
 }
 .dropdown:hover .item-sub{
 	display: block;
