--- a/style.css
+++ b/style.css
@@ -454,3 +454,32 @@ color:rgb(224, 175, 7);
 .sign-1 a:hover{text-decoration: none; color: gray}
 .sign-1 p{font-size: 14px;font-weight: 500}
 .none{display: none!important}
+.container {
+    line-height: 28px;
+}
+
+.container hr {
+    border: 0.8px solid orange;
+    background-color: orange;
+}
+
+.box {
+    width: 100%;
+    height: 66px;
+    border: 2px solid rgb(204, 204,204);
+    background-color: rgb(248, 248, 248);
+    padding: 15px;
+    box-sizing: border-box;
+    margin-bottom: 13px;
+    color: black;
+}
+
+.box a {
+    color: black;
+    
+}
+
+.box img {
+    position: absolute;
+    right: 36px;
+}
